# arxiv-ai-paper-weekly

./: .coverage  .cursorrules  .gitignore  LICENSE  README.md  SETUP_GUIDE.md  construct_email.py  llm.py  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: main.yml  test.yml
config/: test_config.yml  user_interests.yml
scripts/: cleanup_assets.py  update_readme_badges.py
src/: __init__.py
src/core/: __init__.py  config.py
src/data/: __init__.py  paper_models.py
src/integrations/: __init__.py  arxiv_api.py  github_trending.py  papers_enrichment.py  papers_with_code.py  semantic_scholar_api.py
src/services/: __init__.py  paper_discovery.py
src/utils/: __init__.py
tests/: test_config.py  test_config_bugs.py  test_github_trending.py  test_paper_discovery.py  test_paper_models.py  test_papers_with_code.py
